fixed spacing on biopage.  added overflow control to trashbin.

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body>div:first-child {
   background-color: #d8d8d8;
   border: 3px dashed black;
   text-align: center;
+  overflow: scroll;
 }
 
 .trashbin > h1 {
